tests/snapshots/cli__toggle_errors@toggle_flat_unknown_input.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/toggle_flat.flake.nix"
    - "--diff"
    - toggle
    - rust-overlai
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: no input named 'rust-overlai' in flake.nix

hint: run `flake-edit list` to see the current inputs
