tests/snapshots/cli__toggle_errors@toggle_follows_only_follows_only.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/toggle_follows_only.flake.nix"
    - "--diff"
    - toggle
    - nixpkgs-lib
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: input 'nixpkgs-lib' has no url to toggle (follows-only input)
